<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tutorialTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTutorialTitle1"
        android:textSize="24sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:contentDescription="@string/tutorialImageDescr" />

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/sitting"
        android:id="@+id/ivTutorial1"
        android:cropToPadding="true"
        android:adjustViewBounds="true"
        android:layout_height="250dp"
        android:contentDescription="@string/tutorialImageDescr" />

    <TextView
        android:text="@string/tutorialText1"
        android:layout_width="match_parent"
        android:id="@+id/tvTutorialText1"
        android:layout_height="190dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:text="@string/tutorialSwipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvTutorialSwipe1"
        android:textAlignment="center" />

</LinearLayout>